--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -4,27 +4,29 @@
     bottom: 60px;
     left: 0;
     right: 0;
-  }
-  
-  .example-sidenav {
+}
+
+.example-sidenav {
     display: flex;
     align-items: center;
     justify-content: center;
     width: 200px;
     background: rgba(255, 0, 0, 0.5);
-  }
-  
-  .example-header {
+}
+
+.example-header {
     position: fixed;
     top: 0;
     left: 0;
     right: 0;
-  }
-  
-  .example-footer {
+}
+
+.example-footer {
     position: fixed;
     bottom: 0;
     left: 0;
     right: 0;
-  }
-  
+    background-color: #1e2129!important;
+    color: #fff!important;
+    width: 100%;
+}
