--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -4,14 +4,24 @@
     bottom: 60px;
     left: 0;
     right: 0;
+    margin: 20px;
+    box-shadow: 0 3px 3px -2px rgba(0, 0, 0, .2), 0 3px 4px 0 rgba(0, 0, 0, .14), 0 1px 8px 0 rgba(0, 0, 0, .12);
+    padding: 10px;
 }
 
 .example-sidenav {
+    position: absolute;
+    top: 60px;
+    bottom: 60px;
+    left: 0;
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 200px;
-    background: rgba(255, 0, 0, 0.5);
+    width: 280px;
+    background: #fafafa;
+    /*ECF3FF;*/
+    margin: 20px;
+    box-shadow: 0 3px 3px -2px rgba(0, 0, 0, .2), 0 3px 4px 0 rgba(0, 0, 0, .14), 0 1px 8px 0 rgba(0, 0, 0, .12);
 }
 
 .example-header {
