add homeComponent & routing and aceess control

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<app-header class="example-header"></app-header>
-
-
-
+<app-header></app-header>
+<div class="container">
+    <router-outlet></router-outlet>
+</div>
 <app-footer class="example-footer"></app-footer>
