--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -5,7 +5,7 @@
                 <mat-icon class="title-icon">school</mat-icon> &nbsp;
                 <span>EPS</span>
             </div>
-            <div class="nav-link">
+            <div class="nav-link" routerLink="/home" routerLinkActive>
                 <mat-icon class="nav-bar-icon">language</mat-icon> &nbsp;
                 <span class="nav-bar-label">Home</span>
             </div>
