adding the comments field && emoj

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<app-header></app-header>
+<app-header class="header"></app-header>
 <div class="container">
     <router-outlet></router-outlet>
 </div>
-<app-footer class="example-footer"></app-footer>
+<app-footer class="footer"></app-footer>
