--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,4 +1,4 @@
-.example-container {
+/*.example-container {
     position: absolute;
     top: 60px;
     bottom: 60px;
@@ -19,19 +19,21 @@
     justify-content: center;
     width: 280px;
     background: #fafafa;
-    /*ECF3FF;*/
+    /*ECF3FF;*
     margin: 20px;
     box-shadow: 0 3px 3px -2px rgba(0, 0, 0, .2), 0 3px 4px 0 rgba(0, 0, 0, .14), 0 1px 8px 0 rgba(0, 0, 0, .12);
 }
+*/
 
-.example-header {
+.header {
     position: fixed;
     top: 0;
     left: 0;
     right: 0;
+    z-index: 3;
 }
 
-.example-footer {
+.footer {
     position: fixed;
     bottom: 0;
     left: 0;
@@ -39,4 +41,10 @@
     background-color: #1e2129!important;
     color: #fff!important;
     width: 100%;
+}
+
+.container {
+    position: relative;
+    top: 70px;
+    margin-bottom: 80px;
 }
