clean and refactoring code

--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,11 +1,11 @@
 <mat-toolbar class="navbar navbar-light bg-white mb-4" color="primary">
     <div class="container">
         <div class="d-flex align-items-center">
-            <div class="branding navbar-brand">
+            <div class="branding navbar-brand" routerLink="/homeActors">
                 <mat-icon class="title-icon">school</mat-icon> &nbsp;
                 <span>EPS</span>
             </div>
-            <div class="nav-link" routerLink="/home" routerLinkActive>
+            <div class="nav-link" routerLink="/homeActors" routerLinkActive>
                 <mat-icon class="nav-bar-icon">language</mat-icon> &nbsp;
                 <span class="nav-bar-label">Home</span>
             </div>
@@ -67,47 +67,3 @@
         </div>
     </div>
 </mat-toolbar>
-
-<!--<mat-toolbar class="main-header " color="primary ">
-    <button (click)="toggleSidenav.emit() " mat-icon-button>
-    <mat-icon>menu</mat-icon>
-  </button>
-    <div class="branding ">
-        <span>
-      <mat-icon class ="title-icon ">school</mat-icon>
-    </span> &nbsp;
-        <span>EPS</span>
-    </div>
-    <div class="search-bar " fxFlex>
-        <form class="search-form " [ngStyle.xs]="{display: 'none'} ">
-            <mat-icon>search</mat-icon>
-            <input type="text " placeholder="Search " autofocus="true " />
-        </form>
-    </div>
-
-    <button (click)="toggleNotificationSidenav.emit() " mat-icon-button class="ml-xs overflow-visible ">
-    <mat-icon>notifications</mat-icon>
-    <span class="notification-label ">5</span>
-  </button>
-    <button [matMenuTriggerFor]="user " mat-icon-button class="ml-xs ">
-    <mat-icon>person</mat-icon>
-  </button>
-    <mat-menu #user="matMenu " x-position="before ">
-        <button mat-menu-item>
-      <mat-icon>settings</mat-icon>
-      Settings
-    </button>
-        <button mat-menu-item>
-      <mat-icon>account_box</mat-icon>
-      Profile
-    </button>
-        <button mat-menu-item>
-      <mat-icon>notifications_off</mat-icon>
-      Disable notifications
-    </button>
-        <button mat-menu-item>
-      <mat-icon>exit_to_app</mat-icon>
-      Sign Out
-    </button>
-    </mat-menu>
-</mat-toolbar>-->
