add the login component  and logout features

--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -58,7 +58,7 @@
                         <mat-icon color="#7F7F7F">help</mat-icon>
                         <span> Help Center </span>
                     </mat-option>
-                    <mat-option (click)="open( 'contacts') ">
+                    <mat-option (click)="logout()">
                         <mat-icon color="#7F7F7F">power_settings_new</mat-icon>
                         <span> Logout </span>
                     </mat-option>
