--- a/src/app/shared/side-nav/side-nav.component.css
+++ b/src/app/shared/side-nav/side-nav.component.css
@@ -36,6 +36,13 @@
     margin-bottom: 1rem!important;
 }
 
+.profile-card-dock {
+    border-radius: 0.5rem;
+    background-color: rgb(255, 255, 255);
+    padding: 0;
+    margin: 0 0 3px 0;
+}
+
 .profile-header-text {
     display: block;
     font-size: 14px;
@@ -55,6 +62,12 @@
     border-radius: 37px;
     width: 70px;
     height: 70px;
+}
+
+.img-profil-dock {
+    border-radius: 33px;
+    width: 33px;
+    height: 33px;
 }
 
 .href-profil {
@@ -100,5 +113,32 @@
 .home {
     background: transparent;
     height: 100%;
-    height: 100vh;
+    height: calc(100vh - 50px);
+}
+
+.home-admin {
+    background: transparent;
+    height: 100%;
+    height: calc(100vh - 50px);
+    overflow-y: auto;
+}
+
+.home-admin::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    background-color: #F5F5F5;
+}
+
+.home-admin::-webkit-scrollbar {
+    width: 10px;
+    background-color: #F5F5F5;
+}
+
+.home-admin::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
+    background-color: #555;
+}
+
+.opened {
+    max-width: 60px;
 }
