--- a/src/app/modules/educational-institution/educational-institution.component.html
+++ b/src/app/modules/educational-institution/educational-institution.component.html
@@ -4,7 +4,10 @@
             <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter" class="filter">
             <mat-icon>search</mat-icon>
         </mat-form-field>
-        <button mat-raised-button class="btn-create primary"> <mat-icon>add</mat-icon>New Educational Institution</button>
+        <button mat-raised-button class="btn-create primary">
+            <mat-icon>add</mat-icon>
+            <span class="btn-create-text">New Educational Institution</span>
+        </button>
     </div>
     <mat-divider></mat-divider>
     <div class="data-table">
@@ -20,21 +23,33 @@
                 </ng-container>
 
                 <!-- Progress Column -->
-                <ng-container matColumnDef="progress">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Progress </th>
-                    <td mat-cell *matCellDef="let row"> {{row.progress}}% </td>
+                <ng-container matColumnDef="photos">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Logo </th>
+                    <td mat-cell *matCellDef="let row"> {{row.photos}} </td>
                 </ng-container>
 
                 <!-- Name Column -->
-                <ng-container matColumnDef="name">
+                <ng-container matColumnDef="establishmentName">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
-                    <td mat-cell *matCellDef="let row"> {{row.name}} </td>
+                    <td mat-cell *matCellDef="let row"> {{row.establishmentName}} </td>
                 </ng-container>
 
                 <!-- Color Column -->
-                <ng-container matColumnDef="color">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Color </th>
-                    <td mat-cell *matCellDef="let row" [style.color]="row.color"> {{row.color}} </td>
+                <ng-container matColumnDef="description">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Description </th>
+                    <td mat-cell *matCellDef="let row" > {{row.description}} </td>
+                </ng-container>
+
+                <!-- Name Column -->
+                <ng-container matColumnDef="location">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Location </th>
+                    <td mat-cell *matCellDef="let row"> {{row.location}} </td>
+                </ng-container>
+
+                <!-- Name Column -->
+                <ng-container matColumnDef="yearOfFoundation">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Creation Date </th>
+                    <td mat-cell *matCellDef="let row"> {{row.yearOfFoundation}} </td>
                 </ng-container>
 
                 <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
