add the level component

--- a/src/app/shared/side-nav/side-nav.component.html
+++ b/src/app/shared/side-nav/side-nav.component.html
@@ -30,9 +30,9 @@
                 <mat-icon>dashboard</mat-icon>&nbsp;&nbsp;<span *ngIf="!isHandset">Home</span></a>
             <a mat-list-item href="#" routerLink="/educationalinstitution">
                 <mat-icon>account_balance</mat-icon>&nbsp;&nbsp;<span *ngIf="!isHandset">Educational Institution</span></a>
-            <a mat-list-item href="#">
+            <a mat-list-item href="#" routerLink="/level">
                 <mat-icon>insert_chart_outlined</mat-icon>&nbsp;&nbsp;<span *ngIf="!isHandset">Manage Level</span></a>
-            <a mat-list-item href="#">
+            <a mat-list-item href="#"  routerLink="/field">
                 <mat-icon>collections_bookmark</mat-icon>&nbsp;&nbsp;<span *ngIf="!isHandset">Manage Field</span></a>
             <a mat-list-item href="#">
                 <mat-icon>class</mat-icon>&nbsp;&nbsp;<span *ngIf="!isHandset">Manage Class</span></a>
