--- a/src/app/modules/level/level/level.component.html
+++ b/src/app/modules/level/level/level.component.html
@@ -1,3 +1,46 @@
-<p>
-  level works!
-</p>
+<div class="custom-container">
+  <div class="header">
+      <mat-form-field>
+          <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter" class="filter">
+          <mat-icon>search</mat-icon>
+      </mat-form-field>
+      <button mat-raised-button class="btn-create primary" >
+          <mat-icon>add</mat-icon>
+          <span class="btn-create-text">New Educational Institution</span>
+      </button>
+  </div>
+  <mat-divider></mat-divider>
+  <div class="data-table">
+
+
+      <div class="mat-elevation-z8">
+          <table mat-table [dataSource]="dataSource" matSort>
+
+              <!-- ID Column -->
+              <ng-container matColumnDef="id">
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
+                  <td mat-cell *matCellDef="let row"> {{row.id}} </td>
+              </ng-container>
+
+              <!-- Progress Column -->
+              <ng-container matColumnDef="levelName">
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+                  <td mat-cell *matCellDef="let row"> {{row.levelName}} </td>
+              </ng-container>
+
+              <!-- Name Column -->
+              <ng-container matColumnDef="description">
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header> Description </th>
+                  <td mat-cell *matCellDef="let row"> {{row.description}} </td>
+              </ng-container>
+
+              <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+              <tr mat-row *matRowDef="let row; columns: displayedColumns;">
+              </tr>
+          </table>
+
+          <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
+      </div>
+  </div>
+
+</div>
