--- a/src/app/modules/level/level/level.component.html
+++ b/src/app/modules/level/level/level.component.html
@@ -1,46 +1,78 @@
 <div class="custom-container">
   <div class="header">
-      <mat-form-field>
-          <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter" class="filter">
-          <mat-icon>search</mat-icon>
-      </mat-form-field>
-      <button mat-raised-button class="btn-create primary" >
-          <mat-icon>add</mat-icon>
-          <span class="btn-create-text">New Educational Institution</span>
-      </button>
+    <mat-form-field>
+      <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter" class="filter">
+      <mat-icon>search</mat-icon>
+    </mat-form-field>
+    <button mat-raised-button class="btn-create primary" (click)="openDialog()">
+      <mat-icon>add</mat-icon>
+      <span class="btn-create-text">New Educational Institution</span>
+    </button>
   </div>
   <mat-divider></mat-divider>
   <div class="data-table">
 
 
-      <div class="mat-elevation-z8">
-          <table mat-table [dataSource]="dataSource" matSort>
+    <div class="mat-elevation-z8">
+      <table mat-table [dataSource]="dataSource" matSort>
 
-              <!-- ID Column -->
-              <ng-container matColumnDef="id">
-                  <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
-                  <td mat-cell *matCellDef="let row"> {{row.id}} </td>
-              </ng-container>
+        <!-- Checkbox Column -->
+        <ng-container matColumnDef="select">
+          <th mat-header-cell *matHeaderCellDef>
+            <mat-checkbox (change)="$event ? masterToggle() : null" [checked]="selection.hasValue() && isAllSelected()"
+              [indeterminate]="selection.hasValue() && !isAllSelected()" [aria-label]="checkboxLabel()">
+            </mat-checkbox>
+          </th>
+          <td mat-cell *matCellDef="let element">
+            <mat-checkbox (click)="$event.stopPropagation()" (change)="$event ? selection.toggle(element) : null"
+              [checked]="selection.isSelected(element)" [aria-label]="checkboxLabel(element)">
+            </mat-checkbox>
+          </td>
+        </ng-container>
 
-              <!-- Progress Column -->
-              <ng-container matColumnDef="levelName">
-                  <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
-                  <td mat-cell *matCellDef="let row"> {{row.levelName}} </td>
-              </ng-container>
+        <!-- ID Column -->
+        <ng-container matColumnDef="id">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
+          <td mat-cell *matCellDef="let row"> {{row.id}} </td>
+        </ng-container>
 
-              <!-- Name Column -->
-              <ng-container matColumnDef="description">
-                  <th mat-header-cell *matHeaderCellDef mat-sort-header> Description </th>
-                  <td mat-cell *matCellDef="let row"> {{row.description}} </td>
-              </ng-container>
+        <!-- Progress Column -->
+        <ng-container matColumnDef="levelName">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+          <td mat-cell *matCellDef="let row"> {{row.levelName}} </td>
+        </ng-container>
 
-              <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-              <tr mat-row *matRowDef="let row; columns: displayedColumns;">
-              </tr>
-          </table>
+        <!-- Name Column -->
+        <ng-container matColumnDef="description">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Description </th>
+          <td mat-cell *matCellDef="let row"> {{row.description}} </td>
+        </ng-container>
 
-          <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
+        <!-- Star Column -->
+        <ng-container matColumnDef="more" stickyEnd>
+          <th mat-header-cell *matHeaderCellDef></th>
+          <td mat-cell *matCellDef="let row">
+            <mat-icon>more_vert</mat-icon>
+          </td>
+        </ng-container>
+        <mat-icon>more_vert</mat-icon>
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="selection.toggle(row)">
+        </tr>
+      </table>
+      <div class="footer-left">
+        <div class="footer-checkbox">
+          <mat-checkbox (change)="$event ? masterToggle() : null" [checked]="selection.hasValue() && isAllSelected()"
+            [indeterminate]="selection.hasValue() && !isAllSelected()" [aria-label]="checkboxLabel()">
+          </mat-checkbox> All the elements
+        </div>
+        <mat-select [(value)]="selectAction" class="footer-select">
+          <mat-option value="delete">Delete</mat-option>
+        </mat-select>
+        <button mat-raised-button class="btn-create footer-btn"> OK </button>
       </div>
+      <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"> </mat-paginator>
+    </div>
   </div>
 
 </div>
