add the field component

--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -33,11 +33,11 @@
                     <li><a href="contact.html">Contact Us</a></li>
                     <li>
                         <!-- Login Tier Drop Down -->
-                        <label for="drop-2" class="toggle"> Join <span class="fa fa-angle-down"
+                        <label for="drop-1" class="toggle"> Join <span class="fa fa-angle-down"
                                 aria-hidden="true"></span>
                         </label>
-                        <a href="#"><span class="fa fa-user-circle-o" aria-hidden="true"></span> Join <span
-                                class="fa fa-angle-down" aria-hidden="true"></span></a>
+                        <input type="checkbox" id="drop-1" />
+                        <a href="#"><span class="fa fa-user-circle-o" aria-hidden="true"></span> Join <span class="fa fa-angle-down" aria-hidden="true"></span></a>
                         <ul>
                             <li><a href="#team" class="drop-text" routerLink="/login">Sing In</a></li>
                             <li><a href="#stats" class="drop-text" routerLink="/signup">Sign Up</a></li>
