--- a/src/app/modules/field/field/field.component.html
+++ b/src/app/modules/field/field/field.component.html
@@ -36,22 +36,22 @@
           <td mat-cell *matCellDef="let row"> {{row.id}} </td>
         </ng-container>
 
-        <!-- Progress Column -->
-        <ng-container matColumnDef="levelName">
+        <!-- Name Column -->
+        <ng-container matColumnDef="fieldName">
           <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
-          <td mat-cell *matCellDef="let row"> {{row.levelName}} </td>
+          <td mat-cell *matCellDef="let row"> {{row.fieldName}} </td>
         </ng-container>
 
-        <!-- Name Column -->
+        <!-- Description Column -->
         <ng-container matColumnDef="description">
           <th mat-header-cell *matHeaderCellDef mat-sort-header> Description </th>
           <td mat-cell *matCellDef="let row"> {{row.description}} </td>
         </ng-container>
 
-        <!-- educationalInstitution Column -->
-        <ng-container matColumnDef="establishment">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> Institution </th>
-          <td mat-cell *matCellDef="let row"> {{row.establishment.establishmentName}} </td>
+        <!-- Level Column -->
+        <ng-container matColumnDef="level">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Level </th>
+          <td mat-cell *matCellDef="let row"> {{row.level.levelName}} </td>
         </ng-container>
 
         <!-- Star Column -->
