--- a/src/app/shared/side-nav/side-nav.component.html
+++ b/src/app/shared/side-nav/side-nav.component.html
@@ -6,7 +6,7 @@
                 <span>EPS</span>
             </div>
             <div class="btn-close">
-                <button type="button" aria-label="Toggle sidenav" mat-icon-button (click)="dock()">
+                <button type="button" class="btn-dock" aria-label="Toggle sidenav" mat-icon-button (click)="dock()">
           <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
         </button>
             </div>
@@ -34,9 +34,9 @@
                 <mat-icon>insert_chart_outlined</mat-icon>&nbsp;&nbsp;<span *ngIf="!isHandset">Manage Level</span></a>
             <a mat-list-item href="#"  routerLink="/field">
                 <mat-icon>collections_bookmark</mat-icon>&nbsp;&nbsp;<span *ngIf="!isHandset">Manage Field</span></a>
-            <a mat-list-item href="#">
+            <a mat-list-item href="#"  routerLink="/class">
                 <mat-icon>class</mat-icon>&nbsp;&nbsp;<span *ngIf="!isHandset">Manage Class</span></a>
-            <a mat-list-item href="#">
+            <a mat-list-item href="#" routerLink="/course">
                 <mat-icon>cast_for_education </mat-icon>&nbsp;&nbsp;<span *ngIf="!isHandset">Manage Course</span></a>
             <a mat-list-item href="#">
                 <mat-icon>record_voice_over</mat-icon>&nbsp;&nbsp;<span *ngIf="!isHandset">Manage Professor</span></a>
