--- a/src/app/shared/side-nav/side-nav.component.html
+++ b/src/app/shared/side-nav/side-nav.component.html
@@ -34,7 +34,7 @@
                 <mat-icon>insert_chart_outlined</mat-icon>&nbsp;&nbsp;<span *ngIf="!isHandset">Manage Level</span></a>
             <a mat-list-item href="#"  routerLink="/field">
                 <mat-icon>collections_bookmark</mat-icon>&nbsp;&nbsp;<span *ngIf="!isHandset">Manage Field</span></a>
-            <a mat-list-item href="#"  routerLink="/class">
+            <a mat-list-item href="#"  routerLink="/classe">
                 <mat-icon>class</mat-icon>&nbsp;&nbsp;<span *ngIf="!isHandset">Manage Class</span></a>
             <a mat-list-item href="#" routerLink="/course">
                 <mat-icon>cast_for_education </mat-icon>&nbsp;&nbsp;<span *ngIf="!isHandset">Manage Course</span></a>
