fix button add value

--- a/src/app/modules/classe/classe/classe.component.html
+++ b/src/app/modules/classe/classe/classe.component.html
@@ -6,7 +6,7 @@
     </mat-form-field>
     <button mat-raised-button class="btn-create primary" (click)="openDialog()">
       <mat-icon>add</mat-icon>
-      <span class="btn-create-text">New Educational Institution</span>
+      <span class="btn-create-text">Add New Classe</span>
     </button>
   </div>
   <mat-divider></mat-divider>
