--- a/src/app/modules/login/login.component.html
+++ b/src/app/modules/login/login.component.html
@@ -45,7 +45,7 @@
                     </div>
                     <div class="links">
                         <p><a href="#">Forgot Password?</a></p>
-                        <p class="right"><a href="#">New User? Register</a></p>
+                        <p class="right"><a href="#" routerLink="/signup">New User? Register</a></p>
                         <div class="clear"></div>
                     </div>
 
