--- a/src/app/shared/side-nav/side-nav.component.css
+++ b/src/app/shared/side-nav/side-nav.component.css
@@ -1,5 +1,5 @@
 .Sidenav-container {
-    height: 100%;
+    height: 100vh;
     position: fixed;
     top: 0;
     left: 0;
@@ -113,7 +113,7 @@
 .home {
     background: transparent;
     height: 100%;
-    height: calc(100vh - 50px);
+    overflow-y: auto;
 }
 
 .home-admin {
