--- a/src/app/modules/login/login.component.html
+++ b/src/app/modules/login/login.component.html
@@ -44,7 +44,7 @@
                         <button class="btn">Log In</button>
                     </div>
                     <div class="links">
-                        <p><a href="#">Forgot Password?</a></p>
+                        <p><a href="#"  routerLink="/reset" >Forgot Password?</a></p>
                         <p class="right"><a href="#" routerLink="/signup">New User? Register</a></p>
                         <div class="clear"></div>
                     </div>
