--- a/src/app/modules/signup/signup.component.html
+++ b/src/app/modules/signup/signup.component.html
@@ -11,9 +11,9 @@
 <!-- main -->
 <div class="w3layouts-main">
     <div class="bg-layer">
-        <mat-icon routerLink="/home" class="pointer">keyboard_arrow_left</mat-icon>
+        <mat-icon routerLink="/login" class="pointer">keyboard_arrow_left</mat-icon>
 
-        <h1>Educational Personal Space Sign In</h1>
+        <h1>Educational Personal Space Sign Up</h1>
         <div class="header-main">
             <form (ngSubmit)="onSubmit()" [formGroup]="signupForm">
                 <div class="main-icon">
@@ -66,7 +66,7 @@
                         <button class="btn">SIGN UP</button>
                     </div>
                     <div class="links">
-                        <p><a href="#">Forgot Password?</a></p>
+                        <p><a href="#" routerLink="/reset">Forgot Password?</a></p>
                         <div class="clear"></div>
                     </div>
 
