--- a/src/app/modules/forgot-password/forgot-password.component.html
+++ b/src/app/modules/forgot-password/forgot-password.component.html
@@ -1,5 +1,5 @@
 <script>
-    addEventListener("load", function() {
+    addEventListener("load", function () {
         setTimeout(hideURLbar, 0);
     }, false);
 
@@ -9,31 +9,76 @@
 </script>
 
 <!-- main -->
-<div class="w3layouts-main">
+<div class="w3layouts-main" [ngSwitch]="isValidKey">
     <div class="bg-layer">
         <mat-icon routerLink="/login" class="pointer">keyboard_arrow_left</mat-icon>
 
         <h1>Reset Password</h1>
         <div class="header-main">
-            <form (ngSubmit)="onSubmit()" [formGroup]="resetForm">
-                <div class="main-icon">
-                    <span class="fa fa-graduation-cap" aria-hidden="true"></span>
-                </div>
-                <div *ngIf="error" class="alert alert-danger signin-error">{{error}}</div>
-                <div class="header-left-bottom">
+            <ng-template [ngSwitchCase]="false">
+                <form (ngSubmit)="onSubmit()" [formGroup]="resetForm">
+                    <div class="main-icon">
+                        <span class="fa fa-graduation-cap" aria-hidden="true"></span>
+                    </div>
+                    <div *ngIf="error" class="alert alert-danger signin-error">{{error}}</div>
+                    <div *ngIf="isExistedUserMail" class="alert alert-success signup-success">Check Your Mail For Reset
+                        Password</div>
+                    <div class="header-left-bottom">
+                        <div class="icon1">
+                            <span class="fa fa-user"></span>
+                            <input type="email" placeholder="Email Address" required="" formControlName="email"
+                                [ngClass]="{ 'is-invalid': submitted && form.email.errors }" />
+                        </div>
+                        <div *ngIf="submitted && form.email.errors" class="invalid-feedback">
+                            <div *ngIf="form.email.errors.required">Email is required</div>
+                        </div>
+                        <div class="bottom">
+                            <button class="btn" [disabled]="!resetForm.valid">Reset</button>
+                        </div>
+                    </div>
+                </form>
+            </ng-template>
 
-                    <div class="icon1">
-                        <span class="fa fa-user"></span>
-                        <input type="email" placeholder="Email Address" required="" formControlName="username" [ngClass]="{ 'is-invalid': submitted && form.username.errors }" />
+            <ng-template [ngSwitchCase]="true">
+                <form (ngSubmit)="resetPassword()" [formGroup]="resetForm">
+
+                    <div class="main-icon">
+                        <span class="fa fa-graduation-cap" aria-hidden="true"></span>
                     </div>
-                    <div *ngIf="submitted && form.username.errors" class="invalid-feedback">
-                        <div *ngIf="f.username.errors.required">Username is required</div>
-                    </div>                  
-                    <div class="bottom">
-                        <button class="btn">Reset</button>
+                    <div *ngIf="error" class="alert alert-danger signin-error">{{error}}</div>
+                    <div *ngIf="isResetedPassword" [class.activation-msg]="isResetedPassword">Congratulations, your password has been updated!</div>
+                    <div class="header-left-bottom" *ngIf="!isResetedPassword">
+                        <div class="icon1">
+                            <span class="fa fa-user"></span>
+                            <input type="email" placeholder="Email Address" required="" formControlName="email"
+                                readonly="isValidKey" [ngClass]="{ 'is-invalid': submitted && form.email.errors }" />
+                        </div>
+                        <div *ngIf="submitted && form.email.errors" class="invalid-feedback">
+                            <div *ngIf="form.email.errors.required">Email is required</div>
+                        </div>
+
+                        <div class="icon1">
+                            <span class="fa fa-user"></span>
+                            <input type="password" placeholder="Password" required="" formControlName="password"
+                                [ngClass]="{ 'is-invalid': submitted && form.password.errors }" />
+                        </div>
+                        <div *ngIf="submitted && form.password.errors" class="invalid-feedback">
+                            <div *ngIf="form.password.errors.required">Password is required</div>
+                        </div>
+
+                        <div class="icon1">
+                            <span class="fa fa-user"></span>
+                            <input type="password" placeholder="Re-Password" required="" formControlName="repassword" />
+                        </div>
+                        <div class="bottom">
+                            <button class="btn" [disabled]="!resetForm.valid">Reset</button>
+                        </div>
                     </div>
-                </div>
-            </form>
+                    <div class="activation" *ngIf="isResetedPassword">
+                        <button class="bottom-activation" routerLink="/login">Done</button>
+                    </div>
+                </form>
+            </ng-template>
         </div>
 
         <!-- copyright -->
