add the library component

--- a/src/app/modules/field/field/field.component.css
+++ b/src/app/modules/field/field/field.component.css
@@ -10,7 +10,7 @@
 
 .btn-create {
     float: right;
-    background-color: #09509cf2 /*007bff*/;
+    background-color: #0070e0; /*007bff*/;
     color: white;
     cursor: pointer;
     margin: 11px 0;
