--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -10,17 +10,17 @@
                 <span class="nav-bar-label">Home</span>
             </div>
 
-            <div class="nav-link">
+            <div class="nav-link" routerLink="/class">
                 <mat-icon class="nav-bar-icon">class</mat-icon> &nbsp;
                 <span class="nav-bar-label">Classes</span>
             </div>
 
-            <div class="nav-link">
+            <div class="nav-link" routerLink="/library">
                 <mat-icon class="nav-bar-icon">library_books</mat-icon> &nbsp;
                 <span class="nav-bar-label">Library</span>
             </div>
 
-            <div class="nav-link">
+            <div class="nav-link" routerLink="/messenger">
                 <mat-icon class="nav-bar-icon">textsms</mat-icon> &nbsp;
                 <span class="nav-bar-label">Message</span>
             </div>
