--- a/src/app/modules/educational-institution/educational-institution.component.html
+++ b/src/app/modules/educational-institution/educational-institution.component.html
@@ -1,25 +1,44 @@
 <div class="custom-container">
     <div class="header">
-        <mat-form-field>
-            <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter" class="filter">
-            <mat-icon>search</mat-icon>
-        </mat-form-field>
-        <button mat-raised-button class="btn-create primary" (click)="openDialog()">
+        <span class="header-left">Educational Institutions</span>
+        <button mat-raised-button class="btn-create primary" routerLink="/create">
             <mat-icon>add</mat-icon>
             <span class="btn-create-text">Add New Educational Institution</span>
         </button>
     </div>
-    <mat-divider></mat-divider>
+
+    <mat-divider class="header-divider"></mat-divider>
+
     <div class="data-table">
-
-
         <div class="mat-elevation-z8">
+            <div class="filter-header">
+                <mat-form-field>
+                    <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
+                    <mat-icon class="filter-icon">search</mat-icon>
+                </mat-form-field>
+            </div>
             <table mat-table [dataSource]="dataSource" matSort>
+
+                <!-- Checkbox Column -->
+                <ng-container matColumnDef="select">
+                    <th mat-header-cell *matHeaderCellDef>
+                        <mat-checkbox (change)="$event ? masterToggle() : null"
+                            [checked]="selection.hasValue() && isAllSelected()"
+                            [indeterminate]="selection.hasValue() && !isAllSelected()">
+                        </mat-checkbox>
+                    </th>
+                    <td mat-cell *matCellDef="let element">
+                        <mat-checkbox (click)="$event.stopPropagation()"
+                            (change)="$event ? selection.toggle(element) : null"
+                            [checked]="selection.isSelected(element)">
+                        </mat-checkbox>
+                    </td>
+                </ng-container>
 
                 <!-- ID Column -->
                 <ng-container matColumnDef="id">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
-                    <td mat-cell *matCellDef="let row"> {{row.id}} </td>
+                    <td mat-cell *matCellDef="let row">#{{row.id}} </td>
                 </ng-container>
 
                 <!-- Progress Column -->
@@ -37,7 +56,7 @@
                 <!-- Color Column -->
                 <ng-container matColumnDef="description">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> Description </th>
-                    <td mat-cell *matCellDef="let row" > {{row.description}} </td>
+                    <td mat-cell *matCellDef="let row"> {{row.description}} </td>
                 </ng-container>
 
                 <!-- Name Column -->
@@ -46,17 +65,43 @@
                     <td mat-cell *matCellDef="let row"> {{row.location}} </td>
                 </ng-container>
 
+                 <!-- Name Column -->
+                 <ng-container matColumnDef="yearOfFoundation">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header> Creation Date </th>
+                        <td mat-cell *matCellDef="let row"> {{row.yearOfFoundation}} </td>
+                    </ng-container>
+
                 <!-- Name Column -->
-                <ng-container matColumnDef="yearOfFoundation">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Creation Date </th>
-                    <td mat-cell *matCellDef="let row"> {{row.yearOfFoundation}} </td>
+                <ng-container matColumnDef="administration">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Administration </th>
+                    <td mat-cell *matCellDef="let row"> {{row.administration.email}} </td>
                 </ng-container>
 
+                <!-- Star Column -->
+                <ng-container matColumnDef="more" stickyEnd>
+                    <th mat-header-cell *matHeaderCellDef></th>
+                    <td mat-cell *matCellDef="let row">
+                        <mat-icon>more_vert</mat-icon>
+                    </td>
+                </ng-container>
+                <mat-icon>more_vert</mat-icon>
+
                 <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                <tr mat-row *matRowDef="let row; columns: displayedColumns;">
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="selection.toggle(row)">
                 </tr>
             </table>
-
+            <div class="footer-left">
+                <div class="footer-checkbox">
+                    <mat-checkbox (change)="$event ? masterToggle() : null"
+                        [checked]="selection.hasValue() && isAllSelected()"
+                        [indeterminate]="selection.hasValue() && !isAllSelected()">
+                    </mat-checkbox> All the elements
+                </div>
+                <mat-select [(value)]="selectAction" class="footer-select">
+                    <mat-option value="delete">Delete</mat-option>
+                </mat-select>
+                <button mat-raised-button class="btn-create footer-btn"> OK </button>
+            </div>
             <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
         </div>
     </div>
