--- a/src/app/modules/level/level/level.component.css
+++ b/src/app/modules/level/level/level.component.css
@@ -5,13 +5,24 @@
 .header {
     width: 100%;
     padding: 10px;
-    height: 80px;
+    height: 70px;
+}
+
+.header-left {
+    width: 50%;
+    float: left;
+    font-family: sans-serif;
+    font-size: 1.8em;
+    margin: 11px 0;
+}
+
+.header-divider {
+    margin: 0 10px;
 }
 
 .btn-create {
     float: right;
-    background-color: #0070e0;/*007bff*/
-    ;
+    background-color: #007bff;
     color: white;
     cursor: pointer;
     margin: 11px 0;
@@ -30,18 +41,6 @@ table {
     width: 100%;
 }
 
-.mat-form-field {
-    font-size: 14px;
-    width: 30%;
-    float: left;
-    padding: 0 5px;
-}
-
-.mat-form-field-wrapper {
-    padding: 0;
-    margin: 0;
-}
-
 .filter {
     width: 93%;
 }
@@ -49,11 +48,36 @@ table {
 /*td, th {
     width: 15%;
 }*/
-
 td.mat-column-more, th.mat-column-more  {
     width: 20px;
     padding-right: 8px;
 }
+.mat-form-field {
+    height: 60px;
+    width: 100%;
+    font-size: 14px;
+}
+
+::ng-deep .mat-form-field-infix {
+    display: inline-flex !important;
+}
+
+::ng-deep .mat-form-field-wrapper {
+    height: 50px;
+}
+
+.filter-icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+    margin: -7px 0;
+}
+
+.filter-header {
+    height: 50px;
+    padding: 5px 10px;
+}
+
 
 .tab-footer {
     width: 100%;
