--- a/src/app/modules/level/level/level.component.html
+++ b/src/app/modules/level/level/level.component.html
@@ -1,21 +1,24 @@
 <div class="custom-container">
   <div class="header">
-    <mat-form-field>
-      <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter" class="filter">
-      <mat-icon>search</mat-icon>
-    </mat-form-field>
+    <span class="header-left">Levels Management</span>
     <button mat-raised-button class="btn-create primary" (click)="openDialog()">
       <mat-icon>add</mat-icon>
       <span class="btn-create-text">Add New Level</span>
     </button>
   </div>
-  <mat-divider></mat-divider>
+  <mat-divider class="header-divider"></mat-divider>
+
   <div class="data-table">
-
-
     <div class="mat-elevation-z8">
-      <table mat-table [dataSource]="dataSource" matSort>
 
+      <div class="filter-header">
+        <mat-form-field>
+          <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
+          <mat-icon class="filter-icon">search</mat-icon>
+        </mat-form-field>
+      </div>
+
+      <table mat-table [dataSource]="dataSource" matSort>
         <!-- Checkbox Column -->
         <ng-container matColumnDef="select">
           <th mat-header-cell *matHeaderCellDef>
