--- a/src/app/modules/educational-institution/educational-institution-modal/educational-institution-modal.component.html
+++ b/src/app/modules/educational-institution/educational-institution-modal/educational-institution-modal.component.html
@@ -1,3 +1,73 @@
-<p>
-  educational-institution-modal works!
-</p>
+<div id="forms" class="page-layout" fxLayout="column">
+
+    <!-- HEADER -->
+    <span class="header-left">Add New Educational Institutions</span>
+    <mat-divider class="header-divider"></mat-divider>
+  
+    <!-- / HEADER -->
+  
+    <!-- CONTENT -->
+    <div class="content" fxLayout="column" fxLayoutAlign="start" fxLayout.gt-md="row">
+      <!-- REACTIVE FORM EXAMPLE -->
+  
+      <form (ngSubmit)="onSubmit()" class="mat-card mat-elevation-z4" fxLayout="column" fxLayoutAlign="space-between" fxFlex="1 0 auto"
+        name="form" [formGroup]="form">
+  
+        <div fxLayout="row" fxLayoutAlign="start center" fxFlex="1 0 auto">
+          <mat-form-field appearance="outline" fxFlex="100">
+            <mat-label>Administration</mat-label>
+            <mat-select formControlName="administration" required>
+              <mat-option  *ngFor = "let administration of administrations" [value]="administration">
+                {{administration.firstName}} {{administration.lastName}}
+              </mat-option>
+            </mat-select>
+            <mat-icon matSuffix class="secondary-text">account_circle</mat-icon>
+            <mat-error>User is required!</mat-error>
+          </mat-form-field>
+        </div>
+  
+        <div fxLayout="row wrap" fxLayoutAlign="start center" fxFlex="1 0 auto">
+          <mat-form-field appearance="outline" fxFlex="100" class="pr-4">
+            <mat-label>Establishment Name</mat-label>
+            <input matInput formControlName="establishmentName" required>
+            <mat-icon matSuffix class="secondary-text">location_city</mat-icon>
+            <mat-error>Establishment Name is required!</mat-error>
+          </mat-form-field>
+        </div>
+  
+        <div fxLayout="row" fxLayoutAlign="start center" fxFlex="1 0 auto">
+          <mat-form-field appearance="outline" fxFlex="100" class="pr-4">
+            <mat-label>Description</mat-label>
+            <input matInput formControlName="description" required>
+            <mat-icon matSuffix class="secondary-text">toc</mat-icon>
+            <mat-error>Description is required!</mat-error>
+          </mat-form-field>
+        </div>
+  
+        <div fxLayout="row" fxLayoutAlign="start center" fxFlex="1 0 auto">
+          <mat-form-field appearance="outline" fxFlex="100" class="pr-4">
+            <mat-label>Adresse</mat-label>
+            <input matInput formControlName="location" required>
+            <mat-icon matSuffix class="secondary-text">person_pin</mat-icon>
+            <mat-error>Adresse is required!</mat-error>
+          </mat-form-field>
+        </div>
+  
+        <div fxLayout="row" fxLayoutAlign="start center" fxFlex="1 0 auto">
+          <mat-form-field appearance="outline" fxFlex="100" class="pr-4">
+            <mat-label>Photo</mat-label>
+            <input matInput formControlName="photos" required>
+            <mat-icon matSuffix class="secondary-text">photo</mat-icon>
+            <mat-error>Photo is required!</mat-error>
+          </mat-form-field>
+        </div>
+  
+        <div fxLayout="row" fxLayoutAlign="start center" fxFlex="1 0 auto">
+          <button mat-raised-button [disabled]="!form.valid" color="primary" class="btn-save"><mat-icon>save</mat-icon> save </button>
+          <button mat-raised-button color="warn" class="btn-delete"> <mat-icon>cancel</mat-icon> Cancel </button>
+        </div>
+      </form>
+    </div>
+    <!-- / CONTENT -->
+  
+  </div>
