--- a/src/app/modules/educational-institution/educational-institution.component.html
+++ b/src/app/modules/educational-institution/educational-institution.component.html
@@ -1,7 +1,7 @@
 <div class="custom-container">
     <div class="header">
         <span class="header-left">Educational Institutions</span>
-        <button mat-raised-button class="btn-create primary" routerLink="/create">
+        <button mat-raised-button class="btn-create primary"  (click)="openDialog()">
             <mat-icon>add</mat-icon>
             <span class="btn-create-text">Add New Educational Institution</span>
         </button>
@@ -9,7 +9,7 @@
 
     <mat-divider class="header-divider"></mat-divider>
 
-    <div class="data-table">
+    <div class="data-table" *ngIf="educationalInstitutions.length > 0">
         <div class="mat-elevation-z8">
             <div class="filter-header">
                 <mat-form-field>
@@ -65,11 +65,11 @@
                     <td mat-cell *matCellDef="let row"> {{row.location}} </td>
                 </ng-container>
 
-                 <!-- Name Column -->
-                 <ng-container matColumnDef="yearOfFoundation">
-                        <th mat-header-cell *matHeaderCellDef mat-sort-header> Creation Date </th>
-                        <td mat-cell *matCellDef="let row"> {{row.yearOfFoundation}} </td>
-                    </ng-container>
+                <!-- Name Column -->
+                <ng-container matColumnDef="yearOfFoundation">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Creation Date </th>
+                    <td mat-cell *matCellDef="let row"> {{row.yearOfFoundation}} </td>
+                </ng-container>
 
                 <!-- Name Column -->
                 <ng-container matColumnDef="administration">
@@ -104,6 +104,10 @@
             </div>
             <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
         </div>
+    </div>
+
+    <div class="empty-data-source" *ngIf="educationalInstitutions.length == 0">
+        <span>Your Data Base Of Educational Institutions Is Empty </span>
     </div>
 
 </div>
