--- a/src/app/modules/field/field/field.component.css
+++ b/src/app/modules/field/field/field.component.css
@@ -48,10 +48,12 @@ table {
 /*td, th {
     width: 15%;
 }*/
-td.mat-column-more, th.mat-column-more  {
+
+td.mat-column-more, th.mat-column-more {
     width: 20px;
     padding-right: 8px;
 }
+
 .mat-form-field {
     height: 60px;
     width: 100%;
@@ -77,7 +79,6 @@ td.mat-column-more, th.mat-column-more  {
     height: 50px;
     padding: 5px 10px;
 }
-
 
 .tab-footer {
     width: 100%;
@@ -109,4 +110,20 @@ td.mat-column-more, th.mat-column-more  {
 .footer-btn {
     height: 30px;
     text-align: center;
+}
+
+.empty-data-source {
+    width: 526px;
+    height: 90px;
+    font-size: 1.7em;
+    text-align: center;
+    border: 2px solid #007bff;
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateY(-50%) translateX(-50%);
+    font-family: sans-serif;
+    color: grey;
+    border-radius: 20px;
 }
