--- a/src/app/modules/level/level/level.component.html
+++ b/src/app/modules/level/level/level.component.html
@@ -8,7 +8,7 @@
   </div>
   <mat-divider class="header-divider"></mat-divider>
 
-  <div class="data-table">
+  <div class="data-table" *ngIf="levels.length > 0">
     <div class="mat-elevation-z8">
 
       <div class="filter-header">
@@ -83,5 +83,7 @@
       <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"> </mat-paginator>
     </div>
   </div>
-
+  <div class="empty-data-source" *ngIf="levels.length == 0">
+    <span>Your Data Base Of Levels Is Empty </span>
+  </div>
 </div>
