--- a/src/app/modules/user/user/user.component.css
+++ b/src/app/modules/user/user/user.component.css
@@ -48,10 +48,12 @@ table {
 /*td, th {
     width: 15%;
 }*/
-td.mat-column-more, th.mat-column-more  {
+
+td.mat-column-more, th.mat-column-more {
     width: 20px;
     padding-right: 8px;
 }
+
 .mat-form-field {
     height: 60px;
     width: 100%;
@@ -77,7 +79,6 @@ td.mat-column-more, th.mat-column-more  {
     height: 50px;
     padding: 5px 10px;
 }
-
 
 .tab-footer {
     width: 100%;
@@ -111,44 +112,60 @@ td.mat-column-more, th.mat-column-more  {
     text-align: center;
 }
 
-input[type=checkbox]{
-	height: 0;
-	width: 0;
-	visibility: hidden;
+input[type=checkbox] {
+    height: 0;
+    width: 0;
+    visibility: hidden;
 }
 
 label {
-	cursor: pointer;
-	text-indent: -9999px;
-	width: 40px;
-	height: 20px;
-	background: grey;
-	display: block;
-	border-radius: 10px;
-	position: relative;
+    cursor: pointer;
+    text-indent: -9999px;
+    width: 40px;
+    height: 20px;
+    background: grey;
+    display: block;
+    border-radius: 10px;
+    position: relative;
 }
 
 label:after {
-	content: '';
-	position: absolute;
-	top: 5px;
-	left: 5px;
-	width: 10px;
-	height: 10px;
-	background: #fff;
-	border-radius: 10px;
-	transition: 0.3s;
+    content: '';
+    position: absolute;
+    top: 5px;
+    left: 5px;
+    width: 10px;
+    height: 10px;
+    background: #fff;
+    border-radius: 10px;
+    transition: 0.3s;
 }
 
-input:checked + label {
-	background: #bada55;
+input:checked+label {
+    background: #bada55;
 }
 
-input:checked + label:after {
-	left: calc(100% - 5px);
-	transform: translateX(-100%);
+input:checked+label:after {
+    left: calc(100% - 5px);
+    transform: translateX(-100%);
 }
 
 label:active:after {
-	width: 130px;
+    width: 130px;
+}
+
+.empty-data-source {
+    width: 526px;
+    height: 90px;
+    font-size: 1.7em;
+    text-align: center;
+    border: 2px solid #007bff;
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateY(-50%) translateX(-50%);
+    font-family: sans-serif;
+    color: grey;
+    border-radius: 20px;
 }
