--- a/src/app/modules/user/user/user.component.html
+++ b/src/app/modules/user/user/user.component.html
@@ -8,7 +8,7 @@
   </div>
   <mat-divider class="header-divider"></mat-divider>
 
-  <div class="data-table">
+  <div class="data-table" *ngIf="users.length > 0">
     <div class="mat-elevation-z8">
 
       <div class="filter-header">
@@ -70,6 +70,12 @@
         </ng-container>
 
         <!-- educationalInstitution Column -->
+        <ng-container matColumnDef="roles">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Role </th>
+          <td mat-cell *matCellDef="let row"> {{row.roles[0].name}} </td>
+        </ng-container>
+
+        <!-- educationalInstitution Column -->
         <ng-container matColumnDef="enabled">
           <th mat-header-cell *matHeaderCellDef mat-sort-header> Status </th>
           <td mat-cell *matCellDef="let row; let i=index;">
@@ -105,5 +111,7 @@
       <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"> </mat-paginator>
     </div>
   </div>
-
+  <div class="empty-data-source" *ngIf="users.length == 0">
+    <span>Your Data Base Of Users Is Empty </span>
+  </div>
 </div>
